--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,33 @@ matrix:
         - TEST="misc"
         - PROFILE="-Dhadoop.version=2.4.1 -Dscala-2.10"
         - CACHE_NAME=JDK8_H241_M
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="core"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_CO
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="libraries"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_L
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="connectors"
+        - PROFILE="-Dhadoop.version=2.8.0 -Pinclude-kinesis"
+        - CACHE_NAME=JDK9_H280_CN
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="tests"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_T
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="misc"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_M
+ 
+
 
 git:
   depth: 100
