--- a/pom.xml
+++ b/pom.xml
@@ -870,7 +870,7 @@ under the License.
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-enforcer-plugin</artifactId>
-						<version>1.4.1</version>
+						<version>3.0.0</version>
 						<executions>
 							<execution>
 								<id>enforce-maven</id>
@@ -1189,7 +1189,7 @@ under the License.
 									<version>[3.0.3,)</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>${java.version}</version>
+									<version>(${java.version},)</version> <!-- version or higher -->
 								</requireJavaVersion>
 							</rules>
 						</configuration>
