[FLINK-7811] Add Scala 2.12 support
This requires updating some older dependencies for which there are no
Scala 2.12 release:

 - Breeze
 - Grizzled

 This also requires changing the version of the Kafka base module to
 0.10 because this is the first version to have Scala 2.12 support (even
 though we only use the kafka_2.12 dependency for tests and the
 kafka-clients package has not had a Scala dependency since 0.9.

 We also don't build the Kafka 0.8 connector when building a Scala 2.12
 release because there is no dependency for that.

--- a/flink-connectors/flink-connector-kafka-0.9/pom.xml
+++ b/flink-connectors/flink-connector-kafka-0.9/pom.xml
@@ -56,6 +56,7 @@ under the License.
 			<artifactId>flink-connector-kafka-base_${scala.binary.version}</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
+				<!-- exclude 0.10 dependencies -->
 				<exclusion>
 					<groupId>org.apache.kafka</groupId>
 					<artifactId>kafka_${scala.binary.version}</artifactId>
@@ -94,7 +95,7 @@ under the License.
 			<artifactId>flink-connector-kafka-base_${scala.binary.version}</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
-				<!-- exclude 0.8 dependencies -->
+				<!-- exclude 0.10 dependencies -->
 				<exclusion>
 					<groupId>org.apache.kafka</groupId>
 					<artifactId>kafka_${scala.binary.version}</artifactId>
@@ -105,9 +106,10 @@ under the License.
 		</dependency>
 
 		<dependency>
-			<!-- include 0.9 server for tests  -->
+			<!-- include 0.9 server for tests, hard dependecy on 2.11 because there is no
+			Kafka 0.9.x for Scala 2.12-->
 			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_${scala.binary.version}</artifactId>
+			<artifactId>kafka_2.11</artifactId>
 			<version>${kafka.version}</version>
 			<scope>test</scope>
 		</dependency>
