--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -42,7 +42,6 @@ under the License.
 		<module>flink-hbase</module>
 		<module>flink-hcatalog</module>
 		<module>flink-connector-kafka-base</module>
-		<module>flink-connector-kafka-0.8</module>
 		<module>flink-connector-kafka-0.9</module>
 		<module>flink-connector-kafka-0.10</module>
 		<module>flink-connector-elasticsearch-base</module>
@@ -87,6 +86,22 @@ under the License.
 				<module>flink-connector-kinesis</module>
 			</modules>
 		</profile>
+
+		<!--
+			There are no Kafka 0.8.x/0.9.x dependencies for Scala 2.12.
+		-->
+		<profile>
+			<id>include-kafka08</id>
+			<activation>
+				<property>
+					<name>!scala-2.12</name>
+				</property>
+			</activation>
+			<modules>
+				<module>flink-connector-kafka-0.8</module>
+			</modules>
+		</profile>
+
 	</profiles>
 
 </project>
