--- a/pom.xml
+++ b/pom.xml
@@ -393,7 +393,7 @@ under the License.
 			<dependency>
 				<groupId>org.clapper</groupId>
 				<artifactId>grizzled-slf4j_${scala.binary.version}</artifactId>
-				<version>1.0.2</version>
+				<version>1.3.1</version>
 			</dependency>
 
 			<dependency>
@@ -430,7 +430,7 @@ under the License.
 			<dependency>
 				<groupId>org.scalatest</groupId>
 				<artifactId>scalatest_${scala.binary.version}</artifactId>
-				<version>2.2.2</version>
+				<version>3.0.4</version>
 				<scope>test</scope>
 			</dependency>
 
@@ -520,6 +520,20 @@ under the License.
 	</dependencyManagement>
 
 	<profiles>
+		
+		<!-- Profile for switching to Scala Version 2.12 -->
+		<profile>
+			<id>scala-2.12</id>
+			<activation>
+				<property>
+					<name>scala-2.12</name>
+				</property>
+			</activation>
+			<properties>
+				<scala.version>2.12.3</scala.version>
+				<scala.binary.version>2.12</scala.binary.version>
+			</properties>
+		</profile>
 
 		<profile>
 			<id>spotbugs</id>
