--- a/flink-clients/pom.xml
+++ b/flink-clients/pom.xml
@@ -86,8 +86,8 @@ under the License.
 		</dependency>
 		
 		<dependency>
-			<groupId>com.data-artisans</groupId>
-			<artifactId>flakka-testkit_${scala.binary.version}</artifactId>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-testkit_${scala.binary.version}</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
