--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,31 @@ language: java
 # - See https://issues.apache.org/jira/browse/FLINK-1072
 matrix:
   include:
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="core"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_CO
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="libraries"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_L
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="connectors"
+        - PROFILE="-Dhadoop.version=2.8.0 -Pinclude-kinesis"
+        - CACHE_NAME=JDK9_H280_CN
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="tests"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_T
+    - jdk: "oraclejdk9"
+      env:
+        - TEST="misc"
+        - PROFILE="-Dhadoop.version=2.8.0"
+        - CACHE_NAME=JDK9_H280_M
     - jdk: "oraclejdk8"
       env:
         - TEST="core"
