[FLINK-7981][build] Bump commons-lang3 version to 3.6

--- a/flink-libraries/flink-gelly-examples/pom.xml
+++ b/flink-libraries/flink-gelly-examples/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>jsr305</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<scope>compile</scope>
+		</dependency>
 
 		<!-- Add a logging Framework, to make the examples produce -->
 		<!--             logs when executing in the IDE            -->
