--- a/flink-runtime/pom.xml
+++ b/flink-runtime/pom.xml
@@ -104,6 +104,11 @@ under the License.
 		</dependency>
 		
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 		</dependency>
