--- a/flink-examples/pom.xml
+++ b/flink-examples/pom.xml
@@ -52,6 +52,7 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients_${scala.binary.version}</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Add a logging Framework, to make the examples produce -->
