--- a/flink-runtime/pom.xml
+++ b/flink-runtime/pom.xml
@@ -40,6 +40,12 @@ under the License.
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-annotations</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -47,6 +53,12 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-java</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-metrics-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
@@ -108,11 +120,9 @@ under the License.
 			<artifactId>commons-cli</artifactId>
 		</dependency>
 
-		<!-- See: https://groups.google.com/forum/#!msg/netty/-aAPDBNUnDg/SkGOXL2Ma2QJ -->
 		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<!-- Version is set in root POM -->
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
 		</dependency>
 
 		<dependency>
@@ -128,20 +138,6 @@ under the License.
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-remote_${scala.binary.version}</artifactId>
-		</dependency>
-
-		<!-- Transitive dependency of akka-remote that we explicitly define to keep it
-			visible after the shading (without relocation!) of akka-remote -->
-		<dependency>
-			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-stream_${scala.binary.version}</artifactId>
-		</dependency>
-
-		<!-- Transitive dependency of akka-remote that we explicitly define to keep it
-			visible after the shading (without relocation!) of akka-remote -->
-		<dependency>
-			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-protobuf_${scala.binary.version}</artifactId>
 		</dependency>
 
 		<dependency>
@@ -171,18 +167,6 @@ under the License.
 			<version>1.1.4</version>
 		</dependency>
 
-		<!--
-		The KryoSerializer dynamically loads Kryo instances via Chill and requires that Chill
-		is in the classpath. Because we do not want to have transitive Scala dependencies
-		in Flink's API modules (such as flink-java) due to Chill, Chill is added to flink-runtime
-		to ensure that Chill is always present in the classpath.
-		-->
-		<dependency>
-			<groupId>com.twitter</groupId>
-			<artifactId>chill_${scala.binary.version}</artifactId>
-			<version>${chill.version}</version>
-		</dependency>
-
 		<!-- Curator and ZooKeeper - we explicitly add ZooKeeper here as
 			well to make sure our managed version is used -->
 
@@ -195,6 +179,49 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-shaded-curator</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-testkit_${scala.binary.version}</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>net.jcip</groupId>
+			<artifactId>jcip-annotations</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty</artifactId>
+			<version>3.10.6.Final</version>
 		</dependency>
 
 		<!-- test dependencies -->
@@ -225,16 +252,6 @@ under the License.
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_${scala.binary.version}</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-testkit_${scala.binary.version}</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.reflections</groupId>
-			<artifactId>reflections</artifactId>
 		</dependency>
 
 	</dependencies>
